<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="4dp"
    android:layout_marginBottom="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_place_holder"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:paddingStart="8dp"
            android:paddingEnd="20dp"
            android:paddingBottom="5dp"
            android:textColor="#212121"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/post_user_name"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:drawableStart="@drawable/ic_identity"
                android:layout_height="wrap_content"
                android:text="@string/username_place_holder"
                android:gravity="center_vertical"
                android:textSize="12sp"
                android:paddingLeft="8dp"

                android:paddingBottom="2dp"/>

            <TextView
                android:id="@+id/post_category"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/category_place_holder"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:paddingRight="8dp"
                android:paddingBottom="5dp"
                android:gravity="right|center_vertical"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/post_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@mipmap/ic_launcher"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/post_date"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/date_place_holder"
                android:textSize="11sp"
                android:paddingStart="8dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"/>

            <TextView
                android:id="@+id/post_address"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:text="@string/adress_place_holder"
                android:gravity="right"
                android:textSize="11sp"
                android:paddingEnd="8dp"
                android:paddingBottom="2dp"/>

        </LinearLayout>


        <TextView
            android:id="@+id/post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_place_holder"
            android:paddingStart="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="20dp"
            android:textSize="14sp"
            android:textStyle="italic"
            android:textColor="#121212"/>
    </LinearLayout>


</android.support.v7.widget.CardView>