<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardCornerRadius="10dp"
        android:elevation="4dp"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publica_tu_articulo"
                android:gravity="left"
                android:textColor="#121212"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:layout_margin="20dp"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/input_title_edit_text"
                android:maxLength="25"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/titulo"
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/input_description_edit_text"
                android:maxLength="144"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/descripcion"
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp">

                <ImageButton
                    android:id="@+id/input_add_image"
                    android:background="#fff"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_image" />

                <Spinner
                    android:id="@+id/input_spinner"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_margin="5dp">
                </Spinner>

                <ImageButton
                    android:id="@+id/publish_button"
                    android:layout_width="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_publish"
                    android:background="#fff"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>
